/'
@startuml

interface DomainEventId {
  + getValue(): string
}

interface DomainEvent {
  + getId(): DomainEventId
  + getTimestamp(): Date
}

interface TaskEvent {
  + getTaskId(): TaskId
}

interface TaskSubmissionEvent {
  + taskDetails: TaskDetails
}

interface TaskResultEvent {
  + getResult(): TaskResult
}

interface TaskFailureEvent {
  + getError(): TaskError
}

DomainEvent *-up- DomainEventId

DomainEvent <|-- TaskEvent
TaskSubmissionEvent <|-- TaskEvent
TaskResultEvent <|-- TaskEvent
TaskFailureEvent <|-- TaskEvent

@enduml
'/
